Remove absolute positioning to avoid overlap; increase padding.

--- a/source/css/_common/_page/home.styl
+++ b/source/css/_common/_page/home.styl
@@ -186,9 +186,7 @@ section#blogs {
   height: 15em;
   width: 100%;
   background-color: #EEE;
-  padding-top: 1.3em;
-  position: absolute;
-  bottom: 0;
+  padding-top: 3em;
 }
 
 #mce-EMAIL {
